--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
-    "mongodb": "^6.0.0",
+    "mongodb": "^4.17.1",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "react": "18.2.0",
