--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/mongodb-adapter": "^1.1.3",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "moment": "^2.29.4",
     "mongodb": "^4.17.1",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
